--- a/template/product.html
+++ b/template/product.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="./public/css/freeadposting.css">
         <link rel="stylesheet" type="text/css" href="./public/css/animate.css">
         <script src="public/js/jquery-2.1.1.min.js"></script>
-        
+
         <script src="public/js/jquery.als-1.7.min.js"></script>
         <title>HHCORP</title>
     </head>
@@ -153,9 +153,24 @@ and open the template in the editor.
                             </ul>
                         </div>
                         <span class="als-next">
-<!--                            <img src="./public/images/thin_right_arrow_333.png" alt="next" title="next" />-->
-                                >
+                            <!--                            <img src="./public/images/thin_right_arrow_333.png" alt="next" title="next" />-->
+                            >
                         </span>
+                    </div>
+                </div>
+                <div class="sub-navi">
+                    <div class="sub-navi-left">
+                        <form action="" method="GET" >
+                            <input name="postcode" value="" type="text" placeholder="Postcode"/>
+                            <input name="search" value="" type="search" placeholder="Search" />
+                            <input type="submit" value="" name="submit" />
+                        </form>
+                    </div>
+                    <div class="sub-navi-right">
+                        <div class="title-navi">Dentists</div>
+                        <div class="title-navi">Dentists</div>
+                        <div class="title-navi">Dentists</div>
+                        <div class="title-navi">Dentists</div>
                     </div>
                 </div>
             </div>
