--- a/template/public/css/freeadposting.css
+++ b/template/public/css/freeadposting.css
@@ -405,3 +405,16 @@ div.block-day .input-radio{
 .active-text{
     color: rgba(255, 204, 0, 0.86) !important;
 }
+input[name=postcode],  input[name=search] {
+    border-radius: 3px;
+    height: 30px;
+    width: 80px;
+    border: 1px solid #a6ce39;
+    text-align: left;
+    padding-left: 5px;
+}
+input[name=search] {
+width: 179px;
+text-align: left;
+margin-left: 15px;
+}
