--- a/template/freeadposting.html
+++ b/template/freeadposting.html
@@ -33,7 +33,7 @@ and open the template in the editor.
         </div>-->
         <div class="wallpaper">
             <div class="content animated zoomIn">
-                <a href="./"><img src="./public/images/logo.jpg"></a>
+                <a href="./"><img class="logo_freeposition" src="./public/images/logo.jpg"></a>
                 <div id="title">Start promotion your business and drive more traffice to your site by filling in the form below:</div>
                 <form method="get" action="" class="form-freeadpost" enctype="multipart/form-data">
                     <div class="box-content">
