--- a/template/product.html
+++ b/template/product.html
@@ -163,7 +163,7 @@ and open the template in the editor.
                         <form action="" method="GET" >
                             <input name="postcode" value="" type="text" placeholder="Postcode"/>
                             <input name="search" value="" type="search" placeholder="Search" />
-                            <input type="submit" value="" name="submit" />
+                            <input type="submit" name="button-search" value="" name="submit" />
                         </form>
                     </div>
                     <div class="sub-navi-right">
@@ -171,6 +171,99 @@ and open the template in the editor.
                         <div class="title-navi">Dentists</div>
                         <div class="title-navi">Dentists</div>
                         <div class="title-navi">Dentists</div>
+                        <div class="title-navi">Dentists</div>
+                        <div class="title-navi">Dentists</div>
+                        <div class="title-navi">Dentists</div>
+                        <div class="title-navi">Dentists</div>
+                    </div>
+                </div>
+                <div class="big-banner">
+                    
+                </div>
+                <div class="list-banner">
+                    <div class="product-banner">
+                        <div class="header-banner">
+                            
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <span class="name-company">Bankstown &nbsp; 1km</span>
+                        </div>
+                        <img src="./public/images/banner.jpg"  class="banner-content">
+                        <div class="open-time">Open Today: 9am - 5pm</div>
+                        <div class="phone-company">Phone: 02 9798 5885</div>
+                    </div>
+                    <div class="product-banner banner-center">
+                        <div class="header-banner">
+                            
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <span class="name-company">Bankstown &nbsp; 1km</span>
+                        </div>
+                        <img src="./public/images/banner.jpg"  class="banner-content">
+                        <div class="open-time">Open Today: 9am - 5pm</div>
+                        <div class="phone-company">Phone: 02 9798 5885</div>
+                    </div>
+                    <div class="product-banner">
+                        <div class="header-banner">
+                            
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <span class="name-company">Bankstown &nbsp; 1km</span>
+                        </div>
+                        <img src="./public/images/banner.jpg"  class="banner-content">
+                        <div class="open-time">Open Today: 9am - 5pm</div>
+                        <div class="phone-company">Phone: 02 9798 5885</div>
+                    </div>
+                    <div class="product-banner">
+                        <div class="header-banner">
+                            
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <span class="name-company">Bankstown &nbsp; 1km</span>
+                        </div>
+                        <img src="./public/images/banner.jpg"  class="banner-content">
+                        <div class="open-time">Open Today: 9am - 5pm</div>
+                        <div class="phone-company">Phone: 02 9798 5885</div>
+                    </div>
+                    <div class="product-banner banner-center">
+                        <div class="header-banner">
+                            
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <span class="name-company">Bankstown &nbsp; 1km</span>
+                        </div>
+                        <img src="./public/images/banner.jpg"  class="banner-content">
+                        <div class="open-time">Open Today: 9am - 5pm</div>
+                        <div class="phone-company">Phone: 02 9798 5885</div>
+                    </div>
+                    <div class="product-banner">
+                        <div class="header-banner">
+                            
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao_active.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <img src="./public/images/sao.png"  />
+                            <span class="name-company">Bankstown &nbsp; 1km</span>
+                        </div>
+                        <img src="./public/images/banner.jpg"  class="banner-content">
+                        <div class="open-time">Open Today: 9am - 5pm</div>
+                        <div class="phone-company">Phone: 02 9798 5885</div>
                     </div>
                 </div>
             </div>
