--- a/template/public/css/freeadposting.css
+++ b/template/public/css/freeadposting.css
@@ -62,7 +62,7 @@ body{
     margin-top: 30px;
     margin-bottom: 50px;
 }
-.content img{
+.content img.logo_freeposition{
     width: 300px;
     margin-top: 20px;
     margin-left: 30px;
@@ -282,6 +282,7 @@ div.block-day .input-radio{
     position: relative;
     width: 100%;
     margin: 0px auto;
+    margin-top: -30px;
 }
 
 .als-viewport {
@@ -414,7 +415,125 @@ input[name=postcode],  input[name=search] {
     padding-left: 5px;
 }
 input[name=search] {
-width: 179px;
-text-align: left;
-margin-left: 15px;
+    width: 179px;
+    text-align: left;
+    margin-left: 15px;
+}
+input[name=button-search] {
+    height: 30px;
+    display: block;
+    float: right;
+    width: 33px;
+    border: 1px solid #a6ce39;
+    background: #fff url("../images/search.jpg") no-repeat;
+    background-size: 30px;
+    background-position: 0px 2px;
+    position: relative;
+    right: 5px;
+    top: -32px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.sub-navi{
+    width: 100%;
+    height: auto;
+    position: relative;
+    display: block;
+}
+.sub-navi-left{
+    width: 30%;
+    padding-top: 7px;
+}
+.sub-navi-right{
+    width: 70%;
+}
+.sub-navi-left, .sub-navi-right{
+    float: left;
+    display: block;
+
+}
+.title-navi {
+    float: right;
+    width: 160px;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    background: #A6CE39;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.title-navi:hover {
+    background: #FFD323;
+}
+.big-banner {
+    float: left;
+    width: 100%;
+    height: 125px;
+    margin-top: 20px;
+    border: 1px solid #A6CE39;
+    border-radius: 10px;
+}
+.list-banner{
+    float: left;
+    width: 100%;
+    margin-top: 50px;
+}
+.product-banner{
+    float: left;
+    width: 300px;
+    height: 230px;
+    margin: 30px 0px;
+    border: 1px solid #A6CE38;
+    border-radius: 20px 20px 0px 0px;
+}
+.banner-center {
+    margin: 29px 52px;
+}
+.header-banner {
+    display: block;
+    height: 36px;
+    padding-left: 10px;
+    padding-top: 7px;
+}
+.header-banner {
+    display: block;
+    height: 30px;
+}
+.header-banner img {
+    width: 20px;
+    margin: 0px;
+}
+span.name-company {
+    float: right;
+    line-height: 24px;
+    color: #A6CE38;
+    font-weight: bold;
+    position: relative;
+    right: 8px;
+    font-size: 16px;
+}
+.banner-content{
+    position: relative;
+
+}
+.open-time {
+    padding-left: 5px;
+    float: left;
+    line-height: 39px;
+    font-size: 13px;
+    font-weight: bold;
+    color: #A6CE38;
+}
+.phone-company {
+    float: right;
+    line-height: 39px;
+    font-size: 13px;
+    font-weight: bold;
+    text-align: right;
+    color: #A6CE38;
+    padding-right: 5px;
 }
